--- a/src/scss/_flashcard.scss
+++ b/src/scss/_flashcard.scss
@@ -53,4 +53,5 @@
 @mixin backfaceVisibility() {
     backface-visibility: hidden;
     -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
 }
